# ogame-fleet-optimizer

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt  run.bat  rust-toolchain.toml  test.bat
python/: ogame_combat.py
python/ogame_optimizer/: __init__.py  logging_config.py
python/ogame_optimizer/api/: app.py  routes.py  schemas.py
python/ogame_optimizer/core/: __init__.py  combat.py  edge_cases.py  fast_combat.py  fleet.py  tech.py
python/ogame_optimizer/optimizer/: __init__.py  genetic.py  greedy.py  objective.py  orchestration.py  progressive_seeds.py  statistics.py
python/ogame_optimizer/web/static/: app.js  style.css
python/ogame_optimizer/web/templates/: base.html  index.html
python_tests/: test_api.py  test_combat_bridge.py  test_edge_cases.py  test_fast_combat_overkill.py  test_fleet.py  test_genetic.py  test_greedy.py  test_integration.py  test_orchestration.py  test_progressive_seeds.py  test_statistics.py  test_tech.py  test_web_ui.py
src/: combat.rs  lib.rs  rapidfire.rs  ships.rs
