[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "ogame_optimizer"
version = "0.1.0"
description = "OGame fleet auto-optimizer: mixed Rust + Python tool"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "numpy>=1.24",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[tool.maturin]
# Mixed Rust + Python project layout (see https://www.maturin.rs/project_layout).
# - `python-source` points maturin at the Python package source tree
# - `module-name` controls where the compiled cdylib is placed inside the wheel
#   and what Python symbol loads it. We expose the extension as a private
#   submodule of the `ogame_optimizer` package (`_ogame_combat`) and provide
#   a thin top-level `ogame_combat.py` shim so callers can do
#   `import ogame_combat` directly without the package prefix.
python-source = "python"
module-name = "ogame_optimizer._ogame_combat"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["python_tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"